# pinjectra

./: .gitignore  CMakeLists.txt  LICENSE  PIDOF_EXPLORER.bat  Pinjectra.sln  README.md
MsgBoxOnGetMsgProc/: MsgBoxOnGetMsgProc.vcxproj  MsgBoxOnGetMsgProc.vcxproj.filters  dllmain_getmsgproc.cpp
MsgBoxOnProcessAttach/: MsgBoxOnProcessAttach.vcxproj  MsgBoxOnProcessAttach.vcxproj.filters  dllmain_msgbox.cpp
Pinjector/: ALPC.cpp  ALPC.h  Adapters.cpp  CFMA_MVOF_NUVOS_NMVOS.cpp  CFMA_MVOF_NUVOS_NMVOS.h  CFMA_MVOF_OP_PNMVOS.cpp  CFMA_MVOF_OP_PNMVOS.h  CreateRemoteThread.cpp  CreateRemoteThread.h  CtrlInject.cpp  CtrlInject.h  DynamicPayloads.cpp  DynamicPayloads.h  ExecutionTechnique.h  GhostWriting.cpp  GhostWriting.h  HookProcProvider.h  LLA_GPA.cpp  LLA_GPA.h  NQAT_WITH_MEMSET.cpp  NQAT_WITH_MEMSET.h  OP_VAE_WPM.cpp  OP_VAE_WPM.h  OT_OP_VAE_GAAA.cpp  OT_OP_VAE_GAAA.h  PROPagate.cpp  PROPagate.h  Pinjector.vcxproj  Pinjector.vcxproj.filters  PinjectraDemo.cpp  PinjectraPacket.h  QueueUserAPC.cpp  QueueUserAPC.h  SIR.cpp  SIR.h  SetWindowLongPtrA.cpp  SetWindowLongPtrA.h  StaticPayloads.c  StaticPayloads.h  VAE_WPM.cpp  (+9 more)
TestProcess/: TestProcess.c  TestProcess.vcxproj  TestProcess.vcxproj.filters
